# microlane

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
maint/: dump_tech.py  dump_tech_gf180mcuD.py  dump_tech_ihp_sg13cmos5l.py  dump_tech_ihp_sg13g2.py  dump_tech_sky130A.py
src/microlane/: __init__.py  __main__.py
src/microlane/flow/: command_line.py  config.py  report.py  top_level.py
src/microlane/impl/: floorplan.py  patch.py  placement.py  routing.py  streamout.py
src/microlane/synth/: bit_blast.py  buffer.py  clean.py  clock_split.py  elaborate.py  gl_export.py  parse.py  tech_map.py
src/microlane/tech/: __init__.py
src/microlane/tech/sky130_fd_sc_hd/: __init__.py  floorplans.py  pnl_terminals.py  routing_grid.py  rules.py  (+3 more)
src/microlane/util/: database.py  gds.py  lef.py  logic.py  nodes.py  progress.py  structures.py  tech_map.py  tokens.py  verilog.py
tests/: cocotb_gl.sh  cocotb_rtl.sh  drc.sh  harden_cmdline.sh  harden_module.sh  harden_script.sh  lvs.sh  run_all_tests.sh  spice_extract.sh  spice_sim.sh  spice_sim_verify.sh  tt_precheck.sh
tests/magic-drc/reports/: drc.magic.lyrdb  drc.magic.rpt
tests/magic-drc/views/: tt_um_microlane_demo.drc.mag
tests/scripts/: drc.tcl  extract.tcl  harden.py  info.yaml  lvs.py  requirements.txt  sim.gf180mcuD.spice  sim.ihp-sg13cmos5l.spice  sim.ihp-sg13g2.spice  sim.sky130A.spice  sim.spice  verify_sim.py  viewer.sch
tests/scripts/cocotb/: gl.gf180mcuD.mk  gl.ihp-sg13cmos5l.mk  gl.ihp-sg13g2.mk  gl.sky130A.mk  rtl.mk  tb.gf180mcuD.v  tb.ihp-sg13g2.v  test.py
tests/src/: demo.v
(+36 files in other folders)
